# task-manager-cli

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: dev-setup.md  project-review.md
docs/superpowers/plans/: 2026-05-16-task-manager-cli-mvp.md
src/task_manager/: __init__.py  cli.py  models.py  storage.py
src/task_manager_cli.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_storage.py
