[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manager-cli"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
task = "task_manager.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
